Fixed the chat box overflow; added an info bar to the top of the chat box.

--- a/css/chat.css
+++ b/css/chat.css
@@ -137,10 +137,29 @@ body
 {
     border-top: 3px solid #3276b1;
     height: 60%;
+    min-height: 60%;
     position: relative;
+    padding: 0px;
+    margin: 0px;
+}
+
+#chat-info
+{
+    border-bottom: 3px solid #3276b1;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 37px;
 }
 
 #chat-box
+{
+    height: 100%;
+    padding-top: 37px;
+    padding-bottom: 37px;
+}
+
+#chat-box-content
 {
     height: 100%;
     overflow: auto;
@@ -220,6 +239,7 @@ body
     position: absolute;
     bottom: 0px;
     width: 100%;
+    height: 37px;
 }
 
 #chat-form .form-group
@@ -239,4 +259,5 @@ body
     border-radius: 0px;
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px;
+    height: 100%;
 }
